syntax = "proto3";

option csharp_namespace = "AutoParts.Web.Protos";

import public "common.proto";

package AutoPart;

service GrpcAutoPartService {
  rpc GetAutoParts (GetAutoPartsRequest) returns (GetAutoPartsResponse);
  rpc CreateAutoPart (CreateAutoPartRequest) returns (Common.ServiceResponse);
  rpc UpdateAutoPart (UpdateAutoPartRequest) returns (Common.ServiceResponse);
  rpc DeleteAutoPart (DeleteAutoPartRequest) returns (Common.ServiceResponse);
}

message GetAutoPartsRequest {
  int32 page_size = 1;
  int32 page_number = 2;
  string search_text = 3;
  int64 car_modification_id = 4;
  int64 manufacturer_id = 5;
  int64 country_id = 6;
  int64 supplier_id = 7;
  int64 sub_catalog_id = 8;
  bool available_only = 9;
  AutoPartsSortingOption sort_by = 10;
}

message GetAutoPartsResponse {
  int32 total_number_of_items = 1;
  repeated AutoPart auto_parts = 2;
}

message CreateAutoPartRequest {
  string name = 1;
  string description = 2;
  string image_file_name = 3;
  bytes image_file_buffer = 4;
  double price = 5;
  int32 quantity = 6;
  int64 manufacturer_id = 7;
  int64 country_id = 8;
  int64 car_modification_id = 9;
  int64 sub_catalog_id = 10;
}

message UpdateAutoPartRequest {
  int64 auto_part_id = 1;
  string name = 2;
  string description = 3;
  string image_file_name = 4;
  bytes image_file_buffer = 5;
  double price = 6;
  int32 quantity = 7;
}

message DeleteAutoPartRequest {
  int64 auto_part_id = 1;
}

enum AutoPartsSortingOption {
  PRICE_ASCENDING = 0;
  PRICE_DESCENDING = 1;
  QUANTITY_ASCENDING = 2;
  QUANTITY_DESCENDING = 3;
  NAME_ASCENDING = 4;
  NAME_DESCENDING = 5;
}

message AutoPart {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string image_url = 4;
  double price = 5;
  int32 quantity = 6;
  bool is_available = 7;
  int64 country_id = 8;
  string country_name = 9;
  int64 manufacturer_id = 10;
  string manufacturer_name = 11;
  int64 supplier_id = 12;
  string supplier_name = 13;
  int64 sub_catalog_id = 14;
  string sub_catalog_name = 15;
}